# anthywl

./: README  README.md  actions.c  anthywl.c  anthywl.h  buffer.c  buffer.h  ca.tadeo.anthywl.varlink  config.c  config.h  default.nix  default_config  flake.nix  graphics_buffer.c  graphics_buffer.h  kana.inc  meson.build  meson_options.txt
.github/workflows/: main.yml
buildtools/: meson.build
data/: default_config
doc/: anthywl.1.scd  anthywl.5.scd  meson.build
include/: actions.h  anthywl.h  buffer.h  config.h  ipc.h  keymap.h  meson.build
protocol/: meson.build
src/: actions.c  anthywl.c  buffer.c  config.c  graphics_buffer.c  ipc.c  keymap.c  meson.build
subprojects/: libscfg.wrap
